...

import com.example.prestamo_lab_ctma.model.*

class InMemoryPrestamoRepository : PrestamoRepository {

    private var equipos = mutableListOf(
        Equipo(1, "Multímetro digital", CategoriaEquipo.ELECTRONICA, EstadoEquipo.DISPONIBLE),
        Equipo(2, "Kit Arduino", CategoriaEquipo.ELECTRONICA, EstadoEquipo.DISPONIBLE),
        Equipo(3, "Cámara digital", CategoriaEquipo.MULTIMEDIA, EstadoEquipo.DISPONIBLE),
        Equipo(4, "Tablet educativa", CategoriaEquipo.INFORMATICA, EstadoEquipo.RESERVADO),
        Equipo(5, "Taladro inalámbrico", CategoriaEquipo.HERRAMIENTAS, EstadoEquipo.PRESTADO),
        Equipo(6, "Fuente de alimentación", CategoriaEquipo.ELECTRONICA, EstadoEquipo.DISPONIBLE),
        Equipo(7, "Protoboard", CategoriaEquipo.ELECTRONICA, EstadoEquipo.DISPONIBLE),
...
